Fixed some formatting on the navbar so that the top isn't cut off of the page.

--- a/web-client/public/stylesheets/grnsight.styl
+++ b/web-client/public/stylesheets/grnsight.styl
@@ -7,7 +7,7 @@
 .grnsight-container
   position: fixed
   left: 250px
-  top: 50px
+  top: 52px
   right: 5px
   bottom: 5px
   border:1px solid #9A9A9A
@@ -16,7 +16,6 @@
 	width: 225px;
 	margin-left: 10px;
 
-
 form
   margin-bottom: 1ex
 
@@ -24,7 +23,7 @@ form label, form span
   margin: 1ex
 
 .navbar
-  bottom: 7px
+  top: 1px
 
 #upload
   display: none
